# liem-ecosystem

./: .gitignore  Cargo.toml  clippy.toml  rustfmt.toml  setup.iss
apps/liem-bar/: Cargo.toml  README.md  build.rs  clippy.toml  setup.iss
apps/liem-bar/profiles/default/: config.json  layout.json  style.css  theme.json
apps/liem-bar/src/: core.rs  lib.rs  main.rs  modules.rs  services.rs
apps/liem-bar/src/app/: lifecycle.rs
apps/liem-bar/src/cli/: mod.rs
apps/liem-bar/src/core/: config.rs  layout.rs  module.rs  module_manager.rs  renderer.rs  scheduler.rs  theme.rs
apps/liem-bar/src/integrations/: ecosystem.rs
apps/liem-bar/src/modules/: calendar.rs  clock.rs
apps/liem-bar/src/platform/: windows.rs
apps/liem-bar/src/services/: audio.rs  monitor.rs  network.rs  power.rs  system.rs
apps/liem-bar/src/ui/: bar.slint
apps/liem-bar/tests/: test_cli.rs  test_isolation.rs  test_layout.rs  test_monitor.rs  test_plugins.rs  test_theme_sync.rs
apps/liem-cli/: Cargo.toml
apps/liem-cli/src/: main.rs
apps/liem-cli/tests/: test_cli.rs
apps/liem-wallpaper/: setup.iss
apps/liem-wallpaper/crates/lw-cli/: Cargo.toml
apps/liem-wallpaper/crates/lw-cli/src/: main.rs
apps/liem-wallpaper/crates/lw-core/: Cargo.toml
apps/liem-wallpaper/crates/lw-core/src/: config.rs  ipc.rs
apps/liem-wallpaper/crates/lw-core/tests/: config_tests.rs
apps/liem-wallpaper/crates/lw-service/: Cargo.toml
apps/liem-wallpaper/crates/lw-service/src/: ipc.rs  ipc_event_bus.rs  lib.rs  main.rs  startup.rs  ui.rs
apps/liem-wallpaper/crates/lw-service/tests/: ipc_tests.rs
apps/liem-wallpaper/crates/lw-setup/src/: main.rs
apps/liem-wallpaper/tests/: config_tests.rs
crates/liem-common/: Cargo.toml
crates/liem-common/src/: lib.rs  version.rs
crates/liem-config/: Cargo.toml
crates/liem-config/src/: exporter.rs  lib.rs
crates/liem-config/tests/: export_tests.rs
crates/liem-ipc/: Cargo.toml
crates/liem-ipc/src/: lib.rs
crates/liem-sdk/: Cargo.toml
crates/liem-sdk/src/: lib.rs  loader.rs  manifest.rs  security.rs
crates/liem-sdk/tests/: extension_loading_tests.rs
templates/lw-extension-template/: Cargo.toml
templates/lw-extension-template/src/: lib.rs
tests/: Cargo.toml
tests/common/: mod.rs
tests/integration/: test_ipc_discovery.rs  test_theme_sync.rs
