[package]
name = "liem-integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "liem_integration_tests"
path = "common/mod.rs"

[dependencies]
liem-common = { path = "../crates/liem-common" }
liem-ipc = { path = "../crates/liem-ipc" }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[[test]]
name = "test_ipc_discovery"
path = "integration/test_ipc_discovery.rs"

[[test]]
name = "test_theme_sync"
path = "integration/test_theme_sync.rs"
