[package]
name = "liem-ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
liem-common = { path = "../liem-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures-util = "0.3"
