[package]
name = "lw"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
lw-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
liem-common = { path = "../../../../crates/liem-common" }
liem-ipc = { path = "../../../../crates/liem-ipc" }
liem-config = { path = "../../../../crates/liem-config" }

[lints]
workspace = true
